--- a/previsao_receita.ipynb
+++ b/previsao_receita.ipynb
@@ -891,14 +891,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Para fazer as previsões, eu escolhi o modelo Ridge pois ele tinha a melhor aspecto quando eu plottei, já que ambos tinham erros similares."
+    "Para fazer as previsões, eu escolhi o modelo Ridge pois ele tinha a melhor aspecto no quesito de flexibilidade e coesão com a tendência dos valores, já que ambos tinham erros similares."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Além disso, é importante salientar que pela base de dados ser pequena não foi possível treinar os modelos de forma satisfatória.\n"
+    "Além disso, é importante salientar que pela base de dados ser pequena não foi possível treinar e testar os modelos de forma satisfatória.\n"
    ]
   }
  ],
