correct some text errors

--- a/previsao_receita.ipynb
+++ b/previsao_receita.ipynb
@@ -20,8 +20,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Importando as bibliotecas necessárias\n",
-    "\n",
+    "# Importando as bibliotecas necessárias\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -264,8 +263,10 @@
    ],
    "source": [
     "sns.histplot(df_receita.receita, bins=70, kde=False, color='skyblue')\n",
-    "#Limite o y para 50 pois não estava dando para ver as frequências dos outros valores\n",
+    "\n",
+    "# Limitei o y para 50 pois não estava dando para ver as frequências dos outros valores\n",
     "plt.ylim(0, 50)\n",
+    "\n",
     "plt.title('Distribuição dos valores da receita')\n",
     "\n",
     "comentario = \"Possível outlier\"  \n",
@@ -278,7 +279,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Como pode ser visto há um possível outlier acima de 120.000 de receita"
+    "Como pode ser visto, há um possível outlier acima de 120.000 de receita"
    ]
   },
   {
@@ -299,10 +300,10 @@
     }
    ],
    "source": [
-    "#Investigando esse possível outlier\n",
+    "# Investigando esse possível outlier\n",
     "df_receita_outlier = df_receita.loc[df_receita.receita > 120000].copy()\n",
     "\n",
-    "#Verificando na tabela de vendas\n",
+    "# Verificando na tabela de vendas\n",
     "\n",
     "df_venda_outlier = df_venda.loc[df_venda.venda > 120000].copy()\n",
     "\n",
@@ -314,7 +315,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Como pode ser ver, o possível outlier também está presente na tabela de vendas."
+    "Como pode ser visto, o possível outlier também está presente na tabela de vendas."
    ]
   },
   {
@@ -491,10 +492,10 @@
     }
    ],
    "source": [
-    "#Removendo valores negativos pois são cancelamentos\n",
+    "# Removendo valores negativos pois são cancelamentos\n",
     "df_receita = df_receita.query('receita >= 0')\n",
     "\n",
-    "#Adicionando uma coluna de datetime para o modelo\n",
+    "# Adicionando uma coluna de datetime para o modelo\n",
     "\n",
     "df_receita['data'] = df_receita.ano.astype(str) + '-' + df_receita.mes.astype(str)\n",
     "df_receita['data'] = pd.to_datetime(df_receita.data)\n",
@@ -519,11 +520,13 @@
     }
    ],
    "source": [
-    "#Verificando a distribuição após remover os valores cancelados\n",
+    "# Verificando a distribuição após remover os valores cancelados\n",
     "plt.figure(figsize=(12, 5))\n",
     "sns.histplot(df_receita.receita, bins=500, kde=False, color='skyblue')\n",
-    "#limitei o x para não aparecer o possível outlier\n",
+    "\n",
+    "# Limitei o x para não aparecer o possível outlier\n",
     "plt.xlim(0,10000)\n",
+    "\n",
     "plt.title('Distribuição dos valores da receita')\n",
     "plt.show()"
    ]
@@ -532,7 +535,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A distribuição dos valores da receita são similares a uma distribuição exponencial"
+    "A distribuição dos valores da receita é similar a uma distribuição exponencial"
    ]
   },
   {
@@ -546,7 +549,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### modelo Decision Tree Regressor"
+    "### Modelo Decision Tree Regressor"
    ]
   },
   {
@@ -566,8 +569,7 @@
     }
    ],
    "source": [
-    "#Tratamento para o modelo\n",
-    "\n",
+    "# Tratamento para o modelo\n",
     "df_receita_modelo = df_receita.groupby(['data', 'ano', 'mes'])['receita'].sum().copy().reset_index()\n",
     "\n",
     "df_receita_modelo.plot(x='data', y='receita' ,figsize=(12, 5))\n",
@@ -579,7 +581,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "O nosso possível outlier afetando os valores de dezembro de 2019 causando o pico"
+    "O nosso possível outlier está afetando os valores de dezembro de 2019, causando o pico."
    ]
   },
   {
@@ -589,7 +591,6 @@
    "outputs": [],
    "source": [
     "# Dividindo entre Treino e Teste\n",
-    "\n",
     "treino_df = df_receita_modelo[df_receita_modelo.data < '2020-04-01']\n",
     "teste_df = df_receita_modelo[df_receita_modelo.data >= '2020-04-01']\n",
     "\n",
@@ -639,7 +640,7 @@
    "source": [
     "previsoes = tree_model.predict(x_teste)\n",
     "\n",
-    "# Avaliando a performance  do modelo\n",
+    "# Avaliando a performance do modelo\n",
     "mse = mean_squared_error(y_teste, previsoes)\n",
     "mape = mean_absolute_percentage_error(y_teste, previsoes)\n",
     "\n",
@@ -647,7 +648,6 @@
     "print(f\"Mean absolute percentage Error: {mape * 100}\")\n",
     "\n",
     "# Visualizando a previsão com o atual\n",
-    "\n",
     "plt.figure(figsize=(10, 6))\n",
     "plt.plot(df_receita_modelo['data'], df_receita_modelo.receita, label='Atual')\n",
     "plt.plot(teste_df['data'], previsoes, label='Previsão')\n",
@@ -734,11 +734,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Colocando as datas até o final do ano de 2020\n",
-    "\n",
+    "# Colocando as datas até o final do ano de 2020\n",
     "datas_futuras = pd.date_range(start=df_receita_modelo['data'].max(), end='2020-12-31', freq='MS')\n",
     "\n",
-    "#Adicionando as colunas de ano e mês para o modelo\n",
+    "# Adicionando as colunas de ano e mês para o modelo\n",
     "datas_futuras_df = pd.DataFrame({'data': datas_futuras})\n",
     "datas_futuras_df['ano'] = datas_futuras_df['data'].dt.year\n",
     "datas_futuras_df['mes'] = datas_futuras_df['data'].dt.month\n"
@@ -871,7 +870,7 @@
     }
    ],
    "source": [
-    "#Plottando as previsões e as receitas anteriores\n",
+    "# Plottando as previsões e as receitas anteriores\n",
     "plt.figure(figsize=(13, 5))\n",
     "plt.plot(df_receita_modelo['data'], df_receita_modelo['receita'], label='atual')\n",
     "plt.plot(datas_futuras_df['data'], previsoes_futuras, label='previsão')\n",
@@ -891,14 +890,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Para fazer as previsões, eu escolhi o modelo Ridge pois ele tinha a melhor aspecto no quesito de flexibilidade e coesão com a tendência dos valores, já que ambos tinham erros similares."
+    "Para fazer as previsões, eu escolhi o modelo Ridge pois ele tinha o melhor aspecto no quesito de flexibilidade e coesão com a tendência dos valores, já que ambos tinham erros similares."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Além disso, é importante salientar que pela base de dados ser pequena não foi possível treinar e testar os modelos de forma satisfatória.\n"
+    "Além disso, é importante salientar que, pela base de dados ser pequena, não foi possível treinar e testar os modelos de forma satisfatória.\n"
    ]
   }
  ],
