--- a/previsao_receita.ipynb
+++ b/previsao_receita.ipynb
@@ -22,7 +22,6 @@
    "source": [
     "# Importando as bibliotecas necessárias\n",
     "import pandas as pd\n",
-    "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "\n",
@@ -496,7 +495,6 @@
     "df_receita = df_receita.query('receita >= 0')\n",
     "\n",
     "# Adicionando uma coluna de datetime para o modelo\n",
-    "\n",
     "df_receita['data'] = df_receita.ano.astype(str) + '-' + df_receita.mes.astype(str)\n",
     "df_receita['data'] = pd.to_datetime(df_receita.data)\n",
     "\n",
@@ -543,6 +541,13 @@
    "metadata": {},
    "source": [
     "## Criação do Modelo"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A escolha dos modelos foi baseada numa pesquisa que eu fiz sobre modelos que são performam bem para datasets pequenos. Vi que esses modelos não sofriam overfitting rapidamente para esse tipo de conjunto de dados."
    ]
   },
   {
@@ -600,7 +605,7 @@
     "y_treino = treino_df['receita']\n",
     "\n",
     "x_teste = teste_df[features]\n",
-    "y_teste = teste_df['receita']\n"
+    "y_teste = teste_df['receita']"
    ]
   },
   {
@@ -917,7 +922,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.10.8"
   },
   "orig_nbformat": 4
  },
